dist/1.0/bin/sample/retrieveUnpackaged/objects/Calculation__c.object
<CustomObject>
    <description>CBCT Calculation object</description>
    <fields>
        <fullName>Access_Location__c</fullName>
        <label>Access type: Location A</label>
        <picklist>
            <picklistValues>
                <fullName>PoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access loop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_Type_B__c</fullName>
        <label>Access Type B</label>
        <picklist>
            <picklistValues>
                <fullName>PoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access loop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bussiness_Unit__c</fullName>
        <label>Bussiness Unit</label>
        <picklist>
            <picklistValues>
                <fullName>IS</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CBCT_Product__c</fullName>
        <label>CBCT Product</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Colocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Equipment Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS IP Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS IP VPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Internet Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Lambda (International)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Lambda (National)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Leased Line (international)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Leased Line (National)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Non Standard Calculation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CProduct__c</fullName>
        <formula>Request__r.CProduct__r.Name</formula>
        <label>Product (custom)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_ID__c</fullName>
        <label>CBCT Calculation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Budgetary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Changing_of_contract_terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changing of contract terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_Location_A__c</fullName>
        <formula>Request__r.A_End_City__c</formula>
        <label>City Location - A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_location_City__c</fullName>
        <label>Client location: City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clients_Location__c</fullName>
        <formula>TEXT(Request__r.Opportunity_del__r.Account.GTS_Location_del__c )</formula>
        <label>Clients Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Lenght__c</fullName>
        <label>Contract Lenght</label>
        <picklist>
            <picklistValues>
                <fullName>1 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indefinite period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Calculation Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Request__r.Opportunity_del__r.Account.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deinstalled_Capex__c</fullName>
        <formula>Request__r.Deinstalled_Capex__c</formula>
        <label>Deinstalled Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>$User.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>$User.FirstName</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Type__c</fullName>
        <label>Identification Type</label>
        <picklist>
            <picklistValues>
                <fullName>TAX</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identification_subtype__c</fullName>
        <label>Identification subtype</label>
        <picklist>
            <picklistValues>
                <fullName>Foreign Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>$User.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_CBCT__c</fullName>
        <formula>IF(ISNULL(Calculation_ID__c),&quot;&quot;, (HYPERLINK(&quot;http://piaskownica.energis.poland:1380/restricted/showCalculation&quot; &amp; &quot;-&quot; &amp; 
Calculation_ID__c &amp; &quot;-1&quot;,
  &quot;CBCT Link&quot;)))</formula>
        <label>Link to CBCT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_B_City__c</fullName>
        <formula>Request__r.B_End_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location B City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_B_street__c</fullName>
        <formula>Request__r.B_End_Street_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location B Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_international_DC_location_A__c</fullName>
        <label>Major international DC: location A</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Major_location_DC__c</fullName>
        <label>Major international DC: location B</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_opex__c</fullName>
        <formula>text( Request__r.Opex_Monthly__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly opex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Capex__c</fullName>
        <formula>Request__r.Network_Capex__c</formula>
        <label>Network Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_reccuring_price__c</fullName>
        <formula>text(Request__r.Selected_NRC__c)</formula>
        <label>Non reccuring price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Location_A__c</fullName>
        <formula>Request__r.A_End_Street_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Location A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Monthly_Opex__c</fullName>
        <formula>Request__r.Old_Monthly_Opex__c</formula>
        <label>Old Monthly Opex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_off_opex__c</fullName>
        <formula>text(Request__r.Opex_One_off__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-off opex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_time_Capex__c</fullName>
        <formula>text( Request__r.Capex_One_off__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One time Capex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Request__r.Product__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_usable_Capex__c</fullName>
        <formula>text(Request__r.Capex__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Re-usable Capex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_price__c</fullName>
        <formula>text( Request__r.Selected_MRC__c )</formula>
        <label>Recurring price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Number__c</fullName>
        <label>Request Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Calculations</relationshipLabel>
        <relationshipName>Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDH_Ethernet__c</fullName>
        <label>SDH/Ethernet</label>
        <picklist>
            <picklistValues>
                <fullName>SDH/PDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_to_CBCT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to send the Calculation to CBCT</description>
        <inlineHelpText>Check this to send the Calculation to CBCT</inlineHelpText>
        <label>Send to CBCT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speed_IPVPN__c</fullName>
        <label>Speed</label>
        <picklist>
            <picklistValues>
                <fullName>64kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>256kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>512kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1024kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2048kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2x 2048kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3x 2048kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4x 2048kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5x 2048kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6x 2048kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7x 2048kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8x 2048kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9x 2048kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10x 2048kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2x 45Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>155 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2x 155 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>622 Mbps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>In CBCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_B_number__c</fullName>
        <formula>Request__r.B_End_Street_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Number B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Location_A__c</fullName>
        <formula>Request__r.A_End_Street_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Location A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_No__c</fullName>
        <label>Street No.</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <formula>Request__r.Opportunity_del__r.Account.Tax_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Identification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Calculation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Subcalculation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAS_QoS__c</fullName>
        <label>VAS - QoS</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <picklist>
            <picklistValues>
                <fullName>Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmanaged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Calculation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CBCT{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculations</pluralLabel>
    <recordTypes>
        <fullName>IP_VPN</fullName>
        <active>true</active>
        <label>Calculation Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leased_Line</fullName>
        <active>true</active>
        <label>Leased Line</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_the_request_relation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Request__c)</errorConditionFormula>
        <errorMessage>You cannot create Calculation without relation to a request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>set_read_only_calculation</fullName>
        <active>false</active>
        <errorConditionFormula>and( 
priorvalue(Send_to_CBCT__c)=true, 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorMessage>It´s not possible edit the calculation. It has been sent to CBCT.</errorMessage>
    </validationRules>
</CustomObject>